changes (added nodemon, template example)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>safeGringo</title>
-</head>
-<body>
-    
-</body>
-</html>
+<% var pageTitle = 'SafeGringo' %>
+<% include partials/header %>
+
+<h1>Index</h1>
+
+<% include partials/footer %>
