update public assets

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,7 @@
     <title><%= pageTitle || '' %></title>
 
     <!-- Custom for this template -->
-    <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
   </head>
