--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,145 @@
+/* -- Fonts --  */
+
+@font-face {
+  font-family: 'ProximaNova-Bold';
+  src: url('../fonts/ProximaNova-Bold.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ProximaNova-Reg';
+  src: url('../fonts/ProximaNova-Reg.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ProximaNova-Light';
+  src: url('../fonts/ProximaNova-Light.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* -- Basic Patterns -- */
+
+a {
+  text-decoration: none;
+}
+
 body {
-    background: #FFF;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+li {
+  list-style: none;
+}
+
+
+
+/* -- Header -- */
+
+#logo {
+  padding: 25px;
+  padding-right: 10px;
+  margin-left: 60px;
+  width: 150px;
+  vertical-align: middle;
+}
+
+#slogan {                             
+  display: inline;
+  color: white;
+  font-family: "ProximaNova-Light";
+  font-size: 16px;
+  letter-spacing: 0.7px;
+}
+
+header {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  display: inline;
+}
+
+/* -- Cover -- */
+
+#cover {
+  height: 70vh;
+  background: url(../images/cover.jpg) no-repeat center center fixed ; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+
+#layer-protection {
+  height: 70vh;
+  background-color: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+}
+
+/* -- Search -- */
+
+#search {
+  width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#search h1 {
+  font-family: "ProximaNova-Bold";
+  font-size: 36px;
+  color: white;
+  margin-bottom: 20px;
+}
+
+#search input {
+  border: 2px solid #959595; 
+  background: rgba(255,255,255, 0);
+  padding: 15px;
+  margin-right: 10px;
+  display: inline-block;
+  width: 55%;
+  color: #e4e4e4;
+  font-family: "ProximaNova-Light";
+  font-size: 16px;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+  box-shadow: none;
+}
+
+#search input:focus {
+    border: 2px solid #FFF;
+    color: #FFF;
+}
+
+#search button {
+  border: 2px solid #ffd400; 
+  padding: 18px 16px 15px 16px;
+  background: rgba(255,255,255, 0);
+  font-family: "ProximaNova-Bold";
+  text-transform: uppercase;
+  font-size: 13px;
+  color: #ffd400;
+  display: inline-block;
+  outline: none;
+  width: 25%;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+#search button:hover {
+    background: #ffd400;
+    color: #FFF;
 }
