--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,24 @@
 <% var pageTitle = 'SafeGringo' %>
 <% include partials/header %>
 
-<h1>Index</h1>
+<header>
+    <div id="cover"><div id="layer-protection"> 
+      <header>
+        <div>
+          <img id="logo" src="images/logo.svg"/>
+          <p id="slogan">Be confident to explore this amazing city</p>
+        </div>
+      </header> 
+      <div id="search">
+        <h1 id="title">Where would you like to go in Rio?</h1>
+        <form>
+          <input placeholder="Copacabana"></input>
+          <button id="explore_btn">Explore</button>
+        </form>
+      </div>
+    </div></div>
+    <footer>
+    </footer>
+</header>
 
 <% include partials/footer %>
