--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,17 @@
 <% include partials/header %>
 
 <header>
-    <div id="cover"><div id="layer-protection"> 
+    <div id="cover"><div id="layer-protection">
       <header>
         <div>
           <img id="logo" src="images/logo.svg"/>
           <p id="slogan">Be confident to explore this amazing city</p>
         </div>
-      </header> 
+      </header>
       <div id="search">
         <h1 id="title">Where would you like to go in Rio?</h1>
         <form>
-          <input placeholder="Copacabana"></input>
+          <input class="text-field" name="q" placeholder="Start typing the country name" type="text" autocomplete="off">
           <button id="explore_btn">Explore</button>
         </form>
       </div>
