--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
-<script src="js/jquery-1.11.3.min.js" type="text/javascript" ></script>
+  <script src="js/lib/jquery-2.1.4.min.js"></script>
+  <script src="js/lib/jquery.autocomplete.min.js"></script>
+
+  <script src="js/autocomplete"></script>
 </body>
 </html>
