--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,5 @@
   <script src="js/lib/jquery-2.1.4.min.js"></script>
   <script src="js/lib/jquery.autocomplete.min.js"></script>
-
-  <script src="js/autocomplete"></script>
+  <script src="js/autocomplete.js"></script>
 </body>
 </html>
