--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,16 @@
   </div>
 </header>
 
-<section class="card-list"></section>
+<section class="card-list">
+    <div class="card">
+      <div class="card-category">
+        <span>Touristic Point</span>
+        <h2>Copacana Beach</h2>
+      </div>
+      <div class="card-image">
+        <img src="http://www.newyears-brazil.com/_images/photos/rio-copacabana-by-quasebart.jpg" alt="Copacabana">
+      </div>
+    </div>
+</section>
 
 <% include partials/footer %>
