--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,15 @@
         <img src="http://www.newyears-brazil.com/_images/photos/rio-copacabana-by-quasebart.jpg" alt="Copacabana">
       </div>
     </div>
+    <div class="card">
+      <div class="card-category">
+        <span>Touristic Point</span>
+        <h2>Copacana Beach</h2>
+      </div>
+      <div class="card-image">
+        <img src="http://www.newyears-brazil.com/_images/photos/rio-copacabana-by-quasebart.jpg" alt="Copacabana">
+      </div>
+    </div>
 </section>
 
 <% include partials/footer %>
