--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,8 @@ header {
 /* -- Cover -- */
 
 #cover {
-  height: 70vh;
+  min-height: 500px;
+  overflow: hidden;
   background: url(../images/cover.jpg) no-repeat center center fixed ;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -81,7 +82,7 @@ header {
 }
 
 #layer-protection {
-  height: 70vh;
+  min-height: 500px;
   background-color: rgba(0,0,0,0.6);
 }
 
