circular-percentage-bar.css

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,4 +14,5 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/circular-percentage-bar.css">
   </head>
