--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,21 +19,74 @@
 
 <section class="card-list">
     <div class="card">
-      <div class="card-category">
-        <span>Touristic Point</span>
-        <h2>Copacana Beach</h2>
-      </div>
       <div class="card-image">
         <img src="http://www.newyears-brazil.com/_images/photos/rio-copacabana-by-quasebart.jpg" alt="Copacabana">
       </div>
-    </div>
-    <div class="card">
-      <div class="card-category">
-        <span>Touristic Point</span>
-        <h2>Copacana Beach</h2>
-      </div>
-      <div class="card-image">
-        <img src="http://www.newyears-brazil.com/_images/photos/rio-copacabana-by-quasebart.jpg" alt="Copacabana">
+
+      <div class="card-info">
+        <div class="card-category">
+          <h2>Forte de Copacabana</h2>
+          <span>Copacabana Fort</span>
+
+          <p class="description">
+            Não user jóias ou relógios caros, não manipule câmeras grandes e dinheiro am ambiente públicos.
+          </p>
+        </div>
+
+        <div class="card-analytics">
+          <h3>Assaltos por perto</h3>
+          <p>200 assaltos, nos últimos 2 anos *</p>
+
+          <ul class="seasons">
+            <li>
+              <div class="c100 p5 small">
+                <span>5%</span>
+                  <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                  </div>
+              </div>
+
+              <p>Manhã</p>
+            </li>
+
+            <li>
+              <div class="c100 p10 small">
+                <span>10%</span>
+                  <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                  </div>
+              </div>
+
+              <p>Tarde</p>
+            </li>
+
+            <li>
+              <div class="c100 p25 small">
+                <span>25%</span>
+                  <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                  </div>
+              </div>
+
+              <p>Noite</p>
+            </li>
+
+            <li>
+              <div class="c100 p60 small">
+                <span>60%</span>
+                  <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                  </div>
+              </div>
+
+              <p>Madrugada</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 </section>
