--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,15 @@
 
 <header>
   <div id="cover">
-    <div id="layer-protection">
-      <img id="logo" src="images/logo.svg"/>
-      <p id="slogan">Be confident to explore this amazing city</p>
-      <div id="search">
-        <h1 id="title">Where would you like to go in Rio?</h1>
-        <form>
-          <input class="text-field" name="q" placeholder="Start typing..." type="text" autocomplete="off" required></input>
-          <button id="explore_btn">Explore</button>
-        </form>
-      </div>
-    </div>
+		<img id="logo" src="images/logo.svg"/>
+		<p id="slogan">Be confident to explore this amazing city</p>
+		<div id="search">
+			<h1 id="title">Where would you like to go in Rio?</h1>
+			<form>
+				<input class="text-field" name="q" placeholder="Start typing..." type="text" autocomplete="off" required></input>
+				<button id="explore_btn">Explore</button>
+			</form>
+		</div>
   </div>
 </header>
 
@@ -90,5 +88,22 @@
       </div>
     </div>
 </section>
+
+<footer>
+	<div class="cover">
+		<div class="hackpuc">
+			<img class="logo" src="../images/hackpuc.png" class="logo"></img>
+			<span class="subtitle">Competição HackPUC 2015</span>
+		</div>
+		<div class="phones">
+			<span class="label">Helpful Phones</span>
+			<ul class="numbers">
+				<li>190 - Militar Police</li>
+				<li>192 - Ambulance</li>
+				<li>185 - Life Saver</li>
+			</ul>
+		</div>
+	</div>
+</footer>
 
 <% include partials/footer %>
