--- a/public/css/circular-percentage-bar.css
+++ b/public/css/circular-percentage-bar.css
@@ -258,7 +258,7 @@
   width: 5em;
   line-height: 5em;
   font-size: 0.2em;
-  color: #cccccc;
+  color: #666;
   display: block;
   text-align: center;
   white-space: nowrap;
@@ -282,7 +282,7 @@
   display: block;
   content: " ";
   border-radius: 50%;
-  background-color: #f5f5f5;
+  background-color: #fff;
   width: 0.84em;
   height: 0.84em;
   -webkit-transition-property: all;
