initial page have no fake places

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,14 @@
   font-style: normal;
 }
 
+.no-search {
+  overflow: hidden;
+}
+
+.no-search .card-list {
+  display: none;
+}
+
 /* -- Footer -- */
 footer {
   width: 100%;
