--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,3 +16,4 @@
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <link rel="stylesheet" type="text/css" href="css/circular-percentage-bar.css">
   </head>
+  <body class="no-search">
