Footer paragraph adjuste

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
 	<div class="cover">
 		<div class="hackpuc">
 			<img class="logo" src="../images/hackpuc.png" class="logo"></img>
-			<span class="subtitle">Competição HackPUC 2015</span>
+			<span class="subtitle">HackPUC Competition - 2015</span>
 		</div>
 		<div class="phones">
 			<span class="label">Helpful Phones</span>
