--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,8 @@
 		<div class="phones">
 			<span class="label">Helpful Phones</span>
 			<ul class="numbers">
-				<li>190 - Militar Police</li>
-				<li>192 - Ambulance</li>
+				<li>190 - Militar Police |</li>
+				<li>192 - Ambulance |</li>
 				<li>185 - Life Saver</li>
 			</ul>
 		</div>
